# anyrun

./: .gitignore  .gitmodules  README.md  flake.nix  install.sh
.github/workflows/: cargo-audit.yml  cargo-build.yml  cargo-update.yml  nix-build.yml  nix-cache.yml  nix-check.yml  rust.yml
anyrun/: Cargo.toml
anyrun-macros/: Cargo.toml
anyrun-macros/src/: lib.rs
anyrun-plugin/src/: lib.rs
anyrun/src/: config.rs  main.rs  plugin.rs  plugins.rs  types.rs  ui.rs
docs/: Nix.md  Plugin_development.md
examples/: config.ron
nix/: default.nix  hm-module.nix  plugin.nix
nix/plugins/: default.nix
settings/1/: com.kirottu.anyrun.gschema.xml
