[package]
name = "anyrun"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-macros = { path = "../anyrun-macros" }
abi_stable = "0.11.1"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
ron = "0.8.0"
serde = { version = "1.0.151", features = ["derive"] }
anyrun-interface = { path = "../anyrun-interface" }
wl-clipboard-rs = "0.8.1"
nix = { version = "0.26.1", default-features = false, features = ["process"] }
clap = { version = "4.2.7", features = ["derive"] }
