[package]
name = "anyrun"
version = "0.4.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-macros = { path = "../anyrun-macros" }
abi_stable = "0.11.3"
gtk = { version = "0.8.2", package = "gtk4" }
gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
anyrun-interface = { path = "../anyrun-interface" }
wl-clipboard-rs = "0.9.0"
nix = { version = "0.29.0", default-features = false, features = ["process"] }
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
